--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   record: ^5.0.4
   path_provider: ^2.0.0
   path: ^1.8.2
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
